[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-vira"
version = "0.0.1"
authors = [
  { name="Luis Correa", email="luis.correa@neuron.health" },
]
description = "Pythonic VIRA API service consumer API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PrettyBoyHelios/python-vira"
"Bug Tracker" = "https://github.com/PrettyBoyHelios/python-vira/issuess"